gcp/gke/deploy/manifests/fastapi-admin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${GKE_NAMESPACE}
  labels:
    app.kubernetes.io/name: fastapi-admin-app
    environment: production
    pod-security.kubernetes.io/enforce: restricted
